[package]
name = "jruby"
version = "0.1.6"
authors = ["Thomas E. Enebo <tom.enebo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
bindings = { path = "bindings" }
log = { version = "0.4.5", features = ["std"] }
libc = "0.2.67"
nix = "0.19.1"
process_path = "0.1.3"
sys-info = "0.8.0"
windows = "0.2.1"

[build-dependencies]
windows = "0.2.1"
