[package]
name = "jruby"
version = "0.1.6"
authors = ["Thomas E. Enebo <tom.enebo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
log = { version = "0.4.5", features = ["std"] }
libc = "0.2.67"
process_path = "0.1.3"
sys-info = "0.8.0"

[target.'cfg(windows)'.dependencies]
bindings = { path = "bindings" }
windows = "0.2.1"

[target.'cfg(not(windows))'.dependencies]
nix = "0.19.1"

[build-dependencies]
windows = "0.2.1"
