[package]
name = "jruby"
version = "0.1.6"
authors = ["Thomas E. Enebo <tom.enebo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
log = { version = "0.4.14", features = ["std"] }
libc = "0.2.93"
process_path = "0.1.3"
regex = "1.11.1"
sys-info = "0.8.0"

[target.'cfg(windows)'.dependencies]
bindings = { path = "bindings" }
widestring = "0.4.3"

[target.'cfg(not(windows))'.dependencies]
nix = "0.19.1"
